@@ -1,3 +1,7 @@
+2002-11-04  Pierre-Luc Paour <paour@users.sourceforge.net> 1.3.2-cvs-b20
+
+        * Bumped gallery_remote2 protocol version to 2.1.
+
 2002-11-04  Bharat Mediratta  <bharat@menalto.com> 1.3.2-cvs-b19
 
 	* Fixed two small bugs in the setup code where we were using 
